httpbin/kubernetes_deployment.yaml
apiVersion: v1
kind: Service
namespace: httpbin-demo
metadata:
  name: httpbin-demo
  labels:
    app: httpbin-demo
    service: httpbin-demo
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin-demo
---
apiVersion: apps/v1
kind: Deployment
namespace: httpbin-demo
metadata:
  name: httpbin-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-demo
      version: v1
  template:
    metadata:
      labels:
        app: httpbin-demo
        version: v1
    spec:
      serviceAccountName: httpbin-demo
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80
