httpbin/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin-demo
  labels:
    name: httpbin-demo
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-demo
  namespace: httpbin-demo
  labels:
    app: httpbin-demo
    service: httpbin-demo
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-demo
  namespace: httpbin-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-demo
      version: v1
  template:
    metadata:
      labels:
        app: httpbin-demo
        version: v1
    spec:
      serviceAccountName: httpbin-demo
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80
  ---
  apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  namespace: httpbin-demo 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: httpbin-demo
            port:
              number: 8000
